login problem fixed

--- a/templates/shop/nav_footer.html
+++ b/templates/shop/nav_footer.html
@@ -131,6 +131,9 @@
             width: 140px !important;
             height: auto;
         }
+    #search-form{
+        padding: 0px !important;
+    }
     </style >
     <header class="coffee-2" >
         <nav class="navigation d-flex align-items-center fixed-top" style="padding: 10px;  background-color: whitesmoke" >
@@ -298,7 +301,7 @@
                         </div >
                     </div >
                     <div class="col-6" >
-                        <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center" ><a href="#" ><img
+                        <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center" ><a href="{% url 'shop:home' %}" ><img
                                 src="{% static 'assets/images/logo.png' %}" alt="" ></a ></div >
                     </div >
 
