--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -102,9 +102,9 @@
                                     <div class="or-seperator" ><i >or</i ></div >
                                     <p class="text-center" >Login with your social media account</p ><br >
                                     <div class="text-center social-btn" >
-                                        <a href="#" class="btn btn-primary" ><i class="social_facebook" ></i >&nbsp; Facebook</a >
+                                        <a href='{% provider_login_url "facebook" method="oauth2" %}' class="btn btn-primary" ><i class="social_facebook" ></i >&nbsp; Facebook</a >
                                         <a href="#" class="btn btn-info" ><i class="social_twitter" ></i >&nbsp; Twitter</a >
-                                        <a href="#" class="btn btn-danger" ><i class="social_googleplus"></i >&nbsp; Google</a >
+                                        <a href='{% provider_login_url "google" %}' class="btn btn-danger" ><i class="social_googleplus"></i >&nbsp; Google</a >
                                     </div ><br>
                                     <a class="create-account" href="{{ signup_url }}" >Or create an account</a >
                                 </div >
