changes on cart

--- a/templates/shop/shop_detail.html
+++ b/templates/shop/shop_detail.html
@@ -140,11 +140,11 @@
                                                                                                                                                   cart
                                             </button >
                                         </div >
-                                        <div class="product-share" >
-                                            <h5 >Share link:</h5 ><a href="#" ><i class="fab fa-facebook-f" > </i ></a ><a href="#" ><i
-                                                class="fab fa-twitter" ></i ></a ><a href="#" ><i class="fab fa-invision" > </i ></a ><a href="#" ><i
-                                                class="fab fa-pinterest-p" ></i ></a >
-                                        </div >
+{#                                        <div class="product-share" >#}
+{#                                            <h5 >Share link:</h5 ><a href="#" ><i class="fab fa-facebook-f" > </i ></a ><a href="#" ><i#}
+{#                                                class="fab fa-twitter" ></i ></a ><a href="#" ><i class="fab fa-invision" > </i ></a ><a href="#" ><i#}
+{#                                                class="fab fa-pinterest-p" ></i ></a >#}
+{#                                        </div >#}
                                     </div >
                                 </div >
                                 <div class="col-12" >
@@ -152,7 +152,7 @@
                                         <div id="tab-so3" >
                                             <ul class="mb-0" >
                                                 <li class="active" ><a href="#tab-1" >DESCRIPTION</a ></li >
-                                                <li ><a href="#tab-3" >Customer Reviews (02)</a ></li >
+                                                <li ><a href="#tab-3" >Customer Reviews</a ></li >
                                             </ul >
                                             <div id="tab-1" >
                                                 <div class="description-block" >
