payment atttribute removed from address

--- a/templates/shop/nav_footer.html
+++ b/templates/shop/nav_footer.html
@@ -288,9 +288,9 @@
                                         </div >
                                     {% else %}
                                         <div id="mobile-menu_items" ><a class="function-icon fa-sign-in"
-                                                                        href="/accounts/signup" ><span >Signup</span ></a ></div >
+                                                                        href="/user_login" ><span >Signup</span ></a ></div >
                                         <div id="mobile-menu_items" ><a class="function-icon "
-                                                                        href="/accounts/login" ><span >Login</span ></a ></div >
+                                                                        href="/user_login" ><span >Login</span ></a ></div >
                                     {% endif %}
                                 </div >
                                 <div class="mobile-social" ><a href="#" ><i class="fab fa-facebook-f" > </i ></a ><a href="#" ><i
