--- a/templates/shop/nav_footer.html
+++ b/templates/shop/nav_footer.html
@@ -142,13 +142,13 @@
                     <div class="col-2" style="padding-left: 36px; " ><a class="logo" href="{% url 'shop:home' %}" ><img
                             src="{% static 'assets/images/logo.png' %}" alt="" ></a >
                     </div >
-                    <div class="col-lg-2 navgition-menu d-flex align-items-center justify-content-center" style="width: 20%" >
-                        <ul class="mb-0" >
-                            <li class="toggleable" ><a class="menu-item flashbtn" href="{% url 'shop:cattle-shop' %}" >কোরবানি
-                                                                                                                       স্পেশাল<span ></span ><span ></span ><span ></span ><span ></span ></a >
-                            </li >
-                        </ul >
-                    </div >
+                    <!--<div class="col-lg-2 navgition-menu d-flex align-items-center justify-content-center" style="width: 20%" >-->
+                    <!--    <ul class="mb-0" >-->
+                    <!--        <li class="toggleable" ><a class="menu-item flashbtn" href="{% url 'shop:cattle-shop' %}" >কোরবানি-->
+                    <!--                                                                                                   স্পেশাল<span ></span ><span ></span ><span ></span ><span ></span ></a >-->
+                    <!--        </li >-->
+                    <!--    </ul >-->
+                    <!--</div >-->
                     <div class="col-lg-8" style="padding-left: 0px;" >
                         <header class="coffee-2" style="width: 100% !important;" >
                             <div class="navigation-filter" >
@@ -264,10 +264,10 @@
                                         <li class="toggleable" ><a class="menu-item" href="{% url 'shop:about_us' %}" >About us</a >
                                         <li class="toggleable" ><a class="menu-item" href="{% url 'shop:contact_us' %}" >Contact us</a >
                                         </li >
-                                        <li class="toggleable" ><a class="menu-item flashbtn" href="{% url 'shop:cattle-shop' %}"
-                                                                   style="max-height: 30px" >কোরবানি
-                                                                                             স্পেশাল<span ></span ><span ></span ><span ></span ><span ></span ></a >
-                                        </li >
+                                        <!--<li class="toggleable" ><a class="menu-item flashbtn" href="{% url 'shop:cattle-shop' %}"-->
+                                        <!--                           style="max-height: 30px" >কোরবানি-->
+                                        <!--                                                     স্পেশাল<span ></span ><span ></span ><span ></span ><span ></span ></a >-->
+                                        <!--</li >-->
                                     </ul >
                                 </div >
                                 <div class="mobile-login" >
