--- a/templates/shop/custom_login.html
+++ b/templates/shop/custom_login.html
@@ -113,8 +113,9 @@
                                     <button class="no-round-btn" type="submit" >{% trans "Signup " %} / {% trans "Login " %}</button >
                                     <div class="or-seperator" ><i >or</i ></div >
 {#                                    <p class="text-center" >Login with your social media account</p ><br >#}
+
 {#                                    <div class="text-center social-btn" >#}
-                                        <a href='{% provider_login_url "facebook" method="oauth2" %}'  class="btn btn-primary" ><i class="social_facebook" ></i >&nbsp;Login with Facebook</a >
+                                        <a href='{% provider_login_url "facebook" method="js_sdk" %}'  class="btn btn-primary" ><i class="social_facebook" ></i >&nbsp;Login with Facebook</a >
 {#                                        <a href="#" class="btn btn-info" ><i class="social_twitter" ></i >&nbsp; Twitter</a >#}
 {#                                        <a href="#" class="btn btn-danger" ><i class="social_googleplus" ></i >&nbsp; Google</a >#}
 {#                                    </div >#}
